--- a/src/components/about/section-four/section-four.module.css
+++ b/src/components/about/section-four/section-four.module.css
@@ -1,6 +1,7 @@
 .root {
     position: relative;
-    padding-top: 800px;
+    padding-top: 600px;
+    bottom: 0;
 }
 
 .container {
@@ -11,13 +12,13 @@
     left: 0;
     right: 0;
     z-index: 10;
-    gap: 70px;
+    gap: 100px;
     position: absolute;
-    bottom: -200;
 }
 
 .text {
     font-size: 30px;
+    padding-top: 300px;
 }
 
 .heading {
@@ -36,20 +37,21 @@
 @media only screen and (max-width: 1279px) {
     .root {
         padding-bottom: 0px;
+        padding-top: 800px;
     }
 
     .heading {
-        font-size: 40px;
+        font-size: 35px;
         line-height: 50px;
         font-weight: bold;
     }
 
     .text {
-        font-size: 20px;
+        padding-top: 250px;
+        font-size: 15px;
     }
 
     .container {
-        padding-top: 120px;
-        gap: 20px;
+        gap: 30px;
     }
 }
