--- a/src/components/about/section-one/section-one.module.css
+++ b/src/components/about/section-one/section-one.module.css
@@ -53,12 +53,13 @@
 
 @media only screen and (max-width: 1279px) {
     .heading {
-        font-size: 60px;
-        line-height: 70px;
+        font-size: 35px;
+        line-height: 50px;
+        font-weight: bold;
     }
 
     .text {
-        font-size: 24px;
+        font-size: 15px;
     }
 
     .galaxy {
