--- a/src/components/about/section-two/section-two.module.css
+++ b/src/components/about/section-two/section-two.module.css
@@ -20,6 +20,7 @@
     right: 0;
     font-size: 90px;
     line-height: 100px;
+    font-weight: 400;
 }
 
 .light {
@@ -77,13 +78,13 @@
     }
 
     .heading {
-        font-size: 40px;
+        font-size: 35px;
         line-height: 50px;
         font-weight: bold;
     }
 
     .text {
-        font-size: 20px;
+        font-size: 15px;
     }
 
     .asteroid1 {
